<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/edittext_padding"
    tools:context=".fragments.VaccineRegistrationFragment">

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_top"
        android:text="@string/vaccine_new"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_top"
        android:hint="@string/pet_name"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/InputLayout"
        app:layout_constraintTop_toBottomOf="@id/layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPet"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/style_input"
            android:drawableEnd="@drawable/icon_search"
            android:focusable="false"
            android:inputType="textCapWords"
            android:maxLength="50"
            android:paddingStart="@dimen/edittext_padding"
            android:paddingTop="@dimen/edittext_padding"
            android:paddingEnd="@dimen/edittext_padding"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vaccine_name"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/InputLayout"
        app:layout_constraintTop_toBottomOf="@id/lblTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/style_input"
            android:inputType="text"
            android:lines="1"
            android:maxLength="50"
            android:paddingStart="@dimen/edittext_padding"
            android:paddingTop="@dimen/edittext_padding"
            android:paddingEnd="@dimen/edittext_padding"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_margin_top"
        android:text="@string/vaccine_date"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/lblDate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:background="@drawable/style_input"
        android:drawableEnd="@drawable/icon_calendar"
        android:gravity="center_vertical"
        android:maxLength="10"
        android:paddingStart="@dimen/edittext_padding"
        android:paddingTop="@dimen/edittext_padding"
        android:paddingEnd="@dimen/edittext_padding"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vaccine_dose"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/InputLayout"
        app:layout_constraintTop_toBottomOf="@id/lblTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDose"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:background="@drawable/style_input"
            android:inputType="text"
            android:lines="1"
            android:maxLength="20"
            android:paddingStart="@dimen/edittext_padding"
            android:paddingTop="@dimen/edittext_padding"
            android:paddingEnd="@dimen/edittext_padding"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/style_button"
        android:padding="@dimen/button_padding"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputOwner" />
</LinearLayout>